<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/calandresult"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/calcul"
                android:layout_width="0dp"
                android:layout_height="71dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="right"
                android:paddingRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:paddingRight="8dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calcul" />

        </android.support.constraint.ConstraintLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorAccent"
            android:weightSum="6">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/button23"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent" />

                <Button
                    android:id="@+id/vide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:textSize="30sp" />

                <ImageButton
                    android:id="@+id/erase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerCrop"
                    app:srcCompat="@android:drawable/ic_input_delete" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/Clear"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/openingBracket"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="("
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/closingBracket"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text=")"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/divide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/divide"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/seven"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/seven"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/eight"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/eight"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/nine"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/nine"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/multi"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/multi"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/four"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/four"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/five"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/five"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/six"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/six"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/minus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/one"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/two"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/three"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/three"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/plus"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/exponent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/exponent"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/zero"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/comma"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:text="@string/comma"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/equal"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/equals"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>